...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="order_shipment_tracking_added">Shipment tracking added</string>
    <string name="order_shipment_tracking_error">Unable to add tracking</string>
    <string name="order_shipment_tracking_confirm_discard">Are you sure you want to discard this tracking?</string>
    <string name="order_shipment_tracking_empty_provider">Please select a carrier</string>
    <string name="order_shipment_tracking_empty_tracking_num">Please enter a tracking number</string>
    <string name="order_shipment_tracking_empty_custom_provider_name">Please enter a carrier name</string>
    <string name="order_shipment_tracking_custom_provider_section_title">Custom</string>
    <string name="order_shipment_tracking_custom_provider_section_name">Custom Carrier</string>
    <!--
        Notifications
    -->
    <string name="new_notifications">%d new notifications</string>
    <string name="more_notifications">and %d more.</string>
    <!--
...
    <string name="country_mapping_HN">Honduras</string>
    <string name="country_mapping_HK">Hong Kong</string>
    <string name="country_mapping_HU">Hungary</string>

    <!-- I -->
    <string name="country_mapping_IS">Iceland</string>
    <string name="country_mapping_IN">India</string>
    <string name="country_mapping_ID">Indonesia</string>
    <string name="country_mapping_IR">Iran</string>
    <string name="country_mapping_IQ">Iraq</string>
    <string name="country_mapping_IE">Ireland</string>
    <string name="country_mapping_IM">Isle of Man</string>
    <string name="country_mapping_IL">Israel</string>
...

    <!-- U -->
    <string name="country_mapping_UG">Uganda</string>
    <string name="country_mapping_UA">Ukraine</string>
    <string name="country_mapping_AE">United Arab Emirates</string>
    <string name="country_mapping_GB">United Kingdom</string>
    <string name="country_mapping_US">United States</string>
    <string name="country_mapping_UY">Uruguay</string>
    <string name="country_mapping_UZ">Uzbekistan</string>

    <!-- V -->
    <string name="country_mapping_VU">Vanuatu</string>
    <string name="country_mapping_VA">Vatican</string>
...
