<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="co.innoshop.android.ui.orders.AddOrderShipmentTrackingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/snack_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_window_background">

        <LinearLayout
            android:id="@+id/addTracking_editContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Select provider view -->
            <TextView
                android:id="@+id/addTracking_carrier_label"
                style="@style/Woo.TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_shipment_tracking_carrier_label"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTracking_editCarrier"
                style="@style/Woo.OrderTracking.Add.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/list_divider"
                android:gravity="top"
                android:hint="@string/order_shipment_tracking_provider_hint"
                android:minHeight="0dp"
                android:paddingBottom="@dimen/default_padding"
                android:paddingEnd="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/default_padding"/>

            <View
                android:id="@+id/addTracking_editCarrierDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_large"
                android:background="@color/list_divider"/>

            <!-- Add custom provider name view -only visible if custom provider is selected -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addTracking_custom_provider_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/addTracking_custom_provider_name_label"
                    style="@style/Woo.TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/order_shipment_tracking_custom_provider_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTracking_custom_provider_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:gravity="top"
                    android:hint="@string/order_shipment_tracking_custom_provider_name_hint"
                    android:inputType="text"
                    android:maxLength="@integer/max_length_tracking_number"
                    android:nextFocusForward="@+id/addTracking_number"
                    android:paddingBottom="@dimen/margin_extra_large"
                    android:theme="@style/Woo.OrderTracking.Add.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addTracking_custom_provider_name_label"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Add tracking number view -->
            <TextView
                android:id="@+id/addTracking_number_label"
                style="@style/Woo.TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_shipment_tracking_number_label"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTracking_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:gravity="top"
                android:hint="@string/order_shipment_tracking_number_hint"
                android:inputType="text"
                android:maxLength="@integer/max_length_tracking_number"
                android:paddingBottom="@dimen/margin_extra_large"
                android:theme="@style/Woo.OrderTracking.Add.EditText"/>

            <!-- Add custom provider tracking url view -only visible if custom provider is selected -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addTracking_custom_provider_url_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/addTracking_custom_provider_url_label"
                    style="@style/Woo.TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/order_shipment_tracking_custom_provider_url_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTracking_custom_provider_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:gravity="top"
                    android:hint="@string/order_shipment_tracking_custom_provider_url_hint"
                    android:inputType="textUri"
                    android:maxLength="@integer/max_length_tracking_number"
                    android:paddingBottom="@dimen/margin_extra_large"
                    android:theme="@style/Woo.OrderTracking.Add.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addTracking_custom_provider_url_label"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Select date shipped view -->
            <TextView
                android:id="@+id/addTracking_date_label"
                style="@style/Woo.TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_shipment_tracking_date_label"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTracking_date"
                style="@style/Woo.OrderTracking.Add.EditText"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/list_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="date"
                android:minHeight="0dp"
                android:paddingEnd="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:textColor="@color/edit_text_text_color"
                tools:text="May 8, 2019"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
